--- a/infood/android/InfoFood/app/src/main/res/layout/activity_detail.xml
+++ b/infood/android/InfoFood/app/src/main/res/layout/activity_detail.xml
@@ -30,6 +30,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="10dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -62,8 +63,8 @@
             <ImageView
                 android:id="@+id/detail_image"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:src="@mipmap/ic_launcher" />
+                android:layout_height="330dp"
+                android:background="@mipmap/ic_launcher" />
 
             <LinearLayout
                 android:layout_width="match_parent"
